Interns-HUB/Training Compliance & Certification Tracking System Project/force-app/main/default/objects/Training_Module__c/fields/Mandatory__c.field-meta.xml
<CustomField>
    <fullName>Mandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether completion is required</description>
    <label>Mandatory</label>
    <type>Checkbox</type>
</CustomField>