Interns-HUB/Training Compliance & Certification Tracking System Project/force-app/main/default/objects/Training_Module__c/fields/Validity_Period__c.field-meta.xml
<CustomField>
    <fullName>Validity_Period__c</fullName>
    <description>Number of months a certification is valid</description>
    <label>Validity Period</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>